fix footer overlap

--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,7 @@ a{
 
 .footer {
     margin:0;
+    margin-top: 0.5rem;
     background-color: #2F3B39;
     border-top:2px solid #CCD2D0;
     width: 100%;
@@ -125,6 +126,6 @@ a{
     color: #CCD2D0;
     font-size: 14px;
     text-align : center;
-    position: absolute; 
+    position: relative; 
     padding: 0.3em 0 0.3em 0;
 }
